rename mapping to datamodelmapping
