# api/gateway/analysis/models/data_model_mapping.go
@@ -1,0 +1,130 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+/**
+ * Panther is a Cloud-Native SIEM for the Modern Security Team.
+ * Copyright (C) 2020 Panther Labs Inc
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// DataModelMapping data model mapping
+//
+// swagger:model DataModelMapping
+type DataModelMapping struct {
+
+	// field
+	Field Field `json:"field,omitempty"`
+
+	// method
+	Method Method `json:"method,omitempty"`
+
+	// name
+	// Required: true
+	Name SourceName `json:"name"`
+}
+
+// Validate validates this data model mapping
+func (m *DataModelMapping) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateField(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateMethod(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *DataModelMapping) validateField(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Field) { // not required
+		return nil
+	}
+
+	if err := m.Field.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("field")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *DataModelMapping) validateMethod(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Method) { // not required
+		return nil
+	}
+
+	if err := m.Method.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("method")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *DataModelMapping) validateName(formats strfmt.Registry) error {
+
+	if err := m.Name.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("name")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *DataModelMapping) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *DataModelMapping) UnmarshalBinary(b []byte) error {
+	var res DataModelMapping
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
