# api/gateway/analysis/models/update_data_model.go
@@ -54,7 +54,7 @@ type UpdateDataModel struct {
 
 	// mappings
 	// Required: true
-	Mappings Mappings `json:"mappings"`
+	Mappings DataModelMappings `json:"mappings"`
 
 	// user Id
 	// Required: true
